# lilygo-t-hmi-desktop-assistant

./: .gitignore  README.md  code.code-workspace  sdkconfig  sdkconfig.old  version.txt
components/coremark/: idf_component.yml
components/coremark/examples/coremark_example/main/: idf_component.yml
components/freertos-cpp/: idf_component.yml
components/lvgl/env_support/cmake/: esp.cmake
demo/new/esp-idf-5.5.2/lvgl+filesystem/: CMakeLists.txt
demo/new/esp-idf-5.5.2/lvgl+filesystem/main/: display_driver.c  display_port.c  display_port.h  lvgl_port.c  lvgl_port.h  lvgl_rtos_port.c  main.cpp  platform_delay.h  ui.h
extras/: project-log
extras/help/: Mac_HELP.md
extras/help/git-help/: Git_HELP.md
main/: CMakeLists.txt  CONFIG.h  board_config.c  board_config.h  board_pins.h  display_port.c  lv_conf.h  lvgl_port.c  lvgl_port.h  lvgl_rtos_port.c  main.cpp  touch_port.c  touch_port.h
mylibs/filesystem-v003/: version.txt
mylibs/filesystem-v003/include/: LITTLE_fs.h  SPIF_fs.h
mylibs/filesystem-v003/src/: filesystem-os.c
